# vagrant-top

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  event.rs  main.rs  model.rs  vagrant.rs
src/ui/: chart.rs  footer.rs  header.rs  mod.rs  table.rs  theme.rs
